[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t212"
dynamic = ["version"]
description = "Python REST API client for the Trading 212 Public API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["trading212", "trading", "stocks", "finance", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
"Homepage" = "https://github.com/jglasspool/t212"
"Bug Tracker" = "https://github.com/jglasspool/t212/issues"
"Source" = "https://github.com/jglasspool/t212"

[tool.hatch.version]
path = "t212/_version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
